[tool.poetry]
name = "consume-my-functions"
version = "0.1.0"
description = ""
authors = ["Szymon Dziedzic <szymon.d@curvestone.io>"]
readme = "README.md"
packages = [{include = "consume_my_functions"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.1"
cleanco = "^2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
chispa = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
